# converter

./: .gitignore  README.md  app.spec  clean_headers.py  get_base_path.py  headers.py  headers_processing.py  html_converter.py  html_processor.py  import_collector.py  main.py  pdf_converter.py  pyproject.toml  stamps_extractor.py  tables_fixer.py
src/: app.py  interfaces.py  window_methods.py
src/account/: account_window.py
src/auth/: auth_methods.py  load_fonts.py  login.py  login_back.py  regex.py  register.py  register_back.py  register_window.py
src/crud/: crud_window.py
src/db/: create_queries.py  database.py  exec_create.py  exec_drop.py  exec_insert.py  exec_select.py  init_db.py
src/db_work/: db_work.py  db_work_window.py
src/model/: model_window.py
src/pdf_processor/: document_processor.py  html_converter.py  html_processor.py  images_converter.py  ocr.py  pdf_converter.py  pdf_processor_window.py  processor.py  stamps_extractor.py  tables_fixer.py  wrapper.py
src/read/: read_window.py
src/structurer/: structurer.py  structurer_window.py
src/styles/: dark.qss  light.qss
