[project]
name = "converter"
version = "0.1.0"
description = "Конвертер для PDF-файлов ОХЛП"
authors = [
    {name = "Karina Khachatrian"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "python-docx (==1.2.0)",
    "bs4 (==0.0.2)",
    "img2pdf (==0.6.3)",
    "natsort (==8.4.0)",
    "pymupdf (==1.26.7)",
    "numpy (==2.4.1)",
    "opencv-python (==4.13.0.90)",
    "opencv-contrib-python (==4.13.0.90)",
    "ultralytics (==8.4.14)",
    "pyside6 (==6.10.2)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
